--- a/PROPPS/WebContent/css/style.css
+++ b/PROPPS/WebContent/css/style.css
@@ -16,7 +16,8 @@ html,body {
 	margin-top: 10px;
 	height: 60px;
 	background-color: #f5f5f5;
-	position: relative; bottom : 0;
+	position: relative;
+	bottom: 0;
 	width: 100%;
 	bottom: 0;
 }
@@ -62,8 +63,8 @@ html,body {
 
 #wrap {
 	position: relative;
-	min-height: 70%;
-	padding: 20px 0px;
+	min-height: 80%;
+	padding: 40px 0px;
 }
 
 .container .credit {
@@ -82,7 +83,11 @@ html,body {
 
 #detail_user {
 	float: left;
-	padding: 10px 40px;
+	padding: 15px 40px;
+}
+#detail_user .lead i{
+
+	margin: 5px 0px;
 }
 
 #parcours {
@@ -104,13 +109,28 @@ html,body {
 #last-Add {
 	float: left;
 	width: 100%;
-	padding: 5px 0px;
 }
 
 #contact {
 	float: left;
 	width: 100%;
 	padding: 5px 0px;
+}
+
+#title {
+	float: left;
+	width: 100%;
+	height: 50px;
+	margin: 10px 0px;
+}
+
+#title img {
+	padding: 5px 5px 0px 0px;
+	float: left;
+}
+
+#title h3 {
+	float: left;
 }
 
 #contact img {
@@ -150,7 +170,7 @@ html,body {
 		padding-right: 20px;
 	}
 	#header-compte {
-	clear:both;
+		clear: both;
 		margin-left: -20px;
 		margin-right: -20px;
 		padding: 20px 20px;
