--- a/PROPPS/WebContent/css/style.css
+++ b/PROPPS/WebContent/css/style.css
@@ -96,6 +96,17 @@ html,body {
 	width: 100%;
 }
 
+#parcours p{
+	text-align:justify;
+}
+
+#parcours .row{
+	margin-top:5px;
+}
+
+#parcours .row .span7{
+	margin-top:10px;
+}
 #notification {
 	padding: 5px 5px;
 }
@@ -118,7 +129,7 @@ html,body {
 }
 
 #title {
-	float: left;
+	
 	width: 100%;
 	height: 50px;
 	margin: 10px 0px;
@@ -163,7 +174,7 @@ html,body {
 
 /*Responsive */
 @media ( max-width : 980px) {
-	#footer {
+	#footer, #header {
 		margin-left: -20px;
 		margin-right: -20px;
 		padding-left: 20px;
@@ -174,8 +185,5 @@ html,body {
 		margin-left: -20px;
 		margin-right: -20px;
 		padding: 20px 20px;
-	}
-	.form-signin h2 {
-		font-size: 22px;
 	}
 }
