--- a/PROPPS/.settings/org.eclipse.wst.common.component
+++ b/PROPPS/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
     <wb-module deploy-name="PROPPS">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/Test"/>
         <property name="context-root" value="PROPPS"/>
         <property name="java-output-path" value="/PROPPS/build/classes"/>
     </wb-module>
