--- a/PROPPS/WebContent/css/style.css
+++ b/PROPPS/WebContent/css/style.css
@@ -55,6 +55,15 @@ html,body {
 	color: white;
 }
 
+#formInscription input {
+	float: left;
+}
+
+#formInscription p,#formInscription a {
+	float: left;
+	margin: 4px 5px;
+}
+
 /*Content HTML*/
 #header-compte {
 	padding: 70px 0px 30px 0px;
@@ -63,7 +72,7 @@ html,body {
 
 #wrap {
 	position: relative;
-	min-height: 80%;
+	min-height: 75%;
 	padding: 40px 0px;
 }
 
@@ -85,8 +94,8 @@ html,body {
 	float: left;
 	padding: 15px 40px;
 }
-#detail_user .lead i{
 
+#detail_user .lead i {
 	margin: 5px 0px;
 }
 
@@ -96,17 +105,18 @@ html,body {
 	width: 100%;
 }
 
-#parcours p{
-	text-align:justify;
+#parcours p {
+	text-align: justify;
 }
 
-#parcours .row{
-	margin-top:5px;
+#parcours .row {
+	margin-top: 5px;
 }
 
-#parcours .row .span7{
-	margin-top:10px;
+#parcours .row .span7 {
+	margin-top: 10px;
 }
+
 #notification {
 	padding: 5px 5px;
 }
@@ -129,7 +139,6 @@ html,body {
 }
 
 #title {
-	
 	width: 100%;
 	height: 50px;
 	margin: 10px 0px;
@@ -169,12 +178,16 @@ html,body {
 
 #detail_entreprise {
 	float: left;
-	padding: 10px;
+	padding: 15px 40px;
+}
+
+#detail_entreprise .lead i {
+	margin: 5px 5px;
 }
 
 /*Responsive */
 @media ( max-width : 980px) {
-	#footer, #header {
+	#footer,#header {
 		margin-left: -20px;
 		margin-right: -20px;
 		padding-left: 20px;
