--- a/PROPPS/WebContent/css/style.css
+++ b/PROPPS/WebContent/css/style.css
@@ -99,6 +99,11 @@ html,body {
 	margin: 5px 0px;
 }
 
+#addExperience{
+	background-color:#F1F1F1;
+	padding: 0px 5px;
+}
+
 #parcours {
 	float: left;
 	margin-top: 10px;
