--- a/PROPPS/WebContent/css/style.css
+++ b/PROPPS/WebContent/css/style.css
@@ -99,9 +99,9 @@ html,body {
 	margin: 5px 0px;
 }
 
-#addExperience{
+#parcours form{
 	background-color:#F1F1F1;
-	padding: 0px 5px;
+	padding: 5px 5px;
 }
 
 #parcours {
